After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776623 - playbin/playsink fail to use timeoverlay as video-filter
playbin/playsink fail to use timeoverlay as video-filter
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.10.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-12-30 17:13 UTC by Mark Nauwelaerts
Modified: 2017-01-09 13:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
playsink: do not link to audio or video filter using padname (1.46 KB, patch)
2016-12-30 17:13 UTC, Mark Nauwelaerts
committed Details | Review

Description Mark Nauwelaerts 2016-12-30 17:13:00 UTC
Created attachment 342632 [details] [review]
playsink: do not link to audio or video filter using padname

... or more generally any audio or video filter whose sinkpad is not called "sink", as is the case for (e.g.) timeoverlay (called "video_sink" in that case).

Attached simple patch avoids hard-coding the sinkpad name and takes care of this, but wanted to pass it by here in case there was some particular reason the pad was mentioned by specific name.
Comment 1 Mark Nauwelaerts 2017-01-04 14:14:44 UTC
commit 28f4e7db12204d99e43fc3442b0e671e74750957
Author: Mark Nauwelaerts <mnauw@users.sourceforge.net>
Date:   Fri Dec 30 17:55:18 2016 +0100

    playsink: do not link to audio or video filter using padname
    
    ... as a sinkpad need not be called "sink", and it is not the case
    for e.g. timeoverlay (and friends).
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=776623